Fix FAQ button spacing bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@
   display: block;
   text-align: left;
   width: 100%;
-  padding: 1rem 0;
+  padding: 2rem 0;
   color: #7288a2;
   font-size: 2.4rem;
   font-weight: 400;
@@ -258,7 +258,7 @@
   top: 5px;
   left: 9px;
   width: 2px;
-  height: 10px;
+  height: 9px;
   background: currentColor;
 }
 
@@ -272,7 +272,7 @@
 
 .accordion button[aria-expanded='true'] + .accordion-content {
   opacity: 1;
-  max-height: 9rem;
+  max-height: 100%;
   transition: all 200ms linear;
   will-change: opacity, max-height;
 }
